@@ -554,7 +554,7 @@ DestroyModuleConfig  FvwmForm-Rlogin: *
   '*FvwmForm-RloginDefault: Default $(Default?on)'; /bin/echo \\
   '*FvwmForm-RloginDefault: Custom $(Custom?on)' \\
 ) > ${FVWM_USERDIR}/.FvwmForm-Rlogin
-*FvwmForm-Rlogin: Button       restart "Clear"
+*FvwmForm-Rlogin: Button       restart "Reset"
 *FvwmForm-Rlogin: Button       quit    "Cancel"        ^[
 *FvwmForm-Rlogin: Command      Nop
 # Tell FvwmForm to read vars from the .FvwmForm-RloginDefault file:
