@@ -1,3 +1,10 @@
+2001-08-24  Dan Espen  <dane@mk.telcordia.com>
+
+	* FvwmForm/FvwmForm.1: 
+	* FvwmForm/FvwmForm-Rlogin: Change label on "Clear" button to "Reset".
+
+	* FvwmForm/FvwmForm.c (ParseActiveMessage): Use sizeof vs. strlen.
+
 2001-08-23  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmWharf/FvwmWharf.c:
